--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,36 @@ version = "0.1.0"
 description = "Inform other systems that a Vault secret has been updated"
 authors = ["Simon Lundström <simlu+github@su.se>"]
 license = "BSD-3-Clause"
+packages = [
+    { include = "informer.py" },
+    { include = "plugins/__init__.py" },
+    { include = "plugins/su_esb.py" },
+]
 
 [tool.poetry.dependencies]
-python = ">=3.7.2"
+python = ">=3.5.2"
 pyinotify = "^0.9.6"
 
 [tool.poetry.dev-dependencies]
-black = "^23.1.0"
-isort = "^5.11"
-pylint = "^2.16.2"
-python-lsp-server = "^1.7.1"
+isort = "^4.3.21"
+pylint = "^2.6.2"
+
+[tool.poetry.scripts]
+informer = 'informer:main'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[[tool.poetry.source]]
+name = "su"
+url = "https://maven.it.su.se/repository/su-pypi-group/simple"
+
+[tool.pylint]
+    [tool.pylint.master]
+    disable= [
+        'missing-docstring',
+	'duplicate-code',
+        ]
+
+    output-format = 'parseable'
