--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,14 @@ include = [{ path = "vault_informer" }]
 [tool.poetry.dependencies]
 python = ">=3.5.2"
 pyinotify = "^0.9.6"
-stomp-py = "^4.1"
+stomp-py  = { version = "^4.1", optional = true }
 
 [tool.poetry.dev-dependencies]
 isort = "^4.3.21"
 pylint = "^2.6.2"
+
+[tool.poetry.extras]
+stomp = ["stomp-py"]
 
 [tool.poetry.scripts]
 informer = 'vault_informer.informer:main'
